# PixelEye

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  rust.sh  产品需求文档.md
src/: App.css  App.tsx  CompareWindow.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.tsx
src/hooks/: useControlPanel.ts  useImageLoader.ts  useKeyboardShortcuts.ts  useTransparentMode.ts  useWindowCache.ts  useWindowManager.ts
src/utils/: StorageService.ts  environmentUtils.ts
